--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
   "author": "Christopher Scott",
   "license": "MIT",
   "dependencies": {
+    "@frostr/bifrost": "^1.0.0",
     "nostr-tools": "^2.3.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.55",
+    "@types/react": "^18.3.21",
     "@types/react-dom": "^18.2.19",
     "concurrently": "^8.2.2",
     "esbuild": "^0.25.4",
