--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,9 +8,9 @@
   "theme_color": "#1a1a1a",
   "icons": [
     {
-      "src": "/icon.svg",
+      "src": "./icons/logo.png",
       "sizes": "any",
-      "type": "image/svg+xml",
+      "type": "image/png",
       "purpose": "any"
     }
   ]
