--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "license": "MIT",
   "dependencies": {
     "@cmdcode/buff": "^2.2.5",
-    "@cmdcode/nostr-connect": "^0.0.1",
     "@frostr/bifrost": "^1.0.7",
+    "@noble/ciphers": "^1.3.0",
+    "@noble/hashes": "^1.8.0",
+    "@tanstack/react-query": "^5.80.7",
     "nostr-tools": "^2.3.5",
     "qr-scanner": "^1.4.2",
     "react": "^18.2.0",
