--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "MIT",
   "dependencies": {
     "@cmdcode/buff": "^2.2.5",
+    "@cmdcode/nostr-p2p": "^2.0.11",
     "@frostr/bifrost": "^1.0.7",
     "@noble/ciphers": "^1.3.0",
     "@noble/hashes": "^1.8.0",
@@ -31,10 +32,12 @@
     "@types/node": "^22.15.18",
     "@types/react": "^18.3.21",
     "@types/react-dom": "^18.2.19",
+    "@types/ws": "^8.18.1",
     "concurrently": "^8.2.2",
     "esbuild": "^0.25.4",
     "serve": "^14.2.1",
     "tsx": "^4.7.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "ws": "^8.18.2"
   }
 }
