--- a/package.json
+++ b/package.json
@@ -1,43 +1,47 @@
 {
-  "name": "igloo-pwa",
+  "name": "igloo-web",
   "version": "1.0.0",
   "description": "Nostr NIP-46 signing device",
   "main": "dist/app.js",
   "type": "module",
   "scripts": {
-    "build": "tsx scripts/build.ts",
-    "dev": "tsx scripts/dev.ts",
-    "keygen": "tsx scripts/keygen.ts",
-    "relay": "tsx scripts/relay.ts"
+    "build": "tsx script/build.ts",
+    "dev": "tsx script/dev.ts",
+    "keygen": "tsx script/keygen.ts",
+    "relay": "tsx script/relay.ts",
+    "release": "tsx script/release.ts"
   },
   "keywords": [
     "nostr",
+    "frostr",
     "pwa"
   ],
   "author": "Christopher Scott",
   "license": "MIT",
   "dependencies": {
-    "@cmdcode/buff": "^2.2.5",
+    "@cmdcode/nostr-connect": "^0.0.2",
     "@cmdcode/nostr-p2p": "^2.0.11",
     "@frostr/bifrost": "^1.0.7",
     "@noble/ciphers": "^1.3.0",
     "@noble/hashes": "^1.8.0",
-    "@tanstack/react-query": "^5.80.7",
-    "nostr-tools": "^2.3.5",
+    "@tanstack/react-query": "^5.81.2",
+    "@vbyte/buff": "^1.0.2",
+    "@vbyte/micro-lib": "^1.0.8",
+    "nostr-tools": "^2.15.0",
     "qr-scanner": "^1.4.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "@types/node": "^22.15.18",
-    "@types/react": "^18.3.21",
-    "@types/react-dom": "^18.2.19",
+    "@types/node": "^24.0.4",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "@types/ws": "^8.18.1",
-    "concurrently": "^8.2.2",
-    "esbuild": "^0.25.4",
-    "serve": "^14.2.1",
-    "tsx": "^4.7.0",
-    "typescript": "^5.3.3",
+    "concurrently": "^9.2.0",
+    "esbuild": "^0.25.5",
+    "serve": "^14.2.4",
+    "tsx": "^4.20.3",
+    "typescript": "^5.8.3",
     "ws": "^8.18.2"
   }
 }
